<resources>
    <string name="app_name">BingWatcher</string>

    <!-- bottom navigation -->
    <string name="bottom_nav_item_1">Tracked</string>
    <string name="bottom_nav_item_2">Search</string>
    <string name="bottom_nav_item_3">Explore</string>

    <!-- Show Detail -->
    <string name="show_title">Show title</string>
    <string name="last_episode">Last Episode</string>
    <string name="next_episode">Next Episode</string>

    <!-- Retrofit connection-->
    <string name="api_key">4681755dbe9184e2d9a51e441de6985b</string>
    <string name="based_url">https://api.themoviedb.org/3</string>
    <string name="image_based_url">http://image.tmdb.org/t/p/original</string>
    <string name="poster_based_url">http://image.tmdb.org/t/p/w185/</string>
    <string name="RETROFIT_ERROR">RETROFIT_ERROR</string>

    <!-- Database -->
    <string name="DB_CHILD_USERS">users</string>
    <string name="DB_CHILD_USER_ID">user_id</string>
    <string name="DB_CHILD_TVSERIES">tvSeries</string>
    <string name="DB_CHILD_TVSERIES_DETAILS">tv_series_details</string>
    <string name="DB_CHILD_AIR_DATE">air_date</string>

    <!-- Bundles -->
    <string name="TV_SHOW">TV_SHOW</string>
    <string name="EPISODE">EPISODE</string>
    <string name="SEASONS">SEASONS</string>
    <string name="TV_ID">TV_ID</string>
    <string name="SEASON_NUMBER">SEASON_NUMBER</string>
    <string name="EPISODE_NUMBER">EPISODE_NUMBER</string>
    <string name="SERIES_DETAILS">SERIES_DETAILS</string>
    <string name="SEASON">SEASON</string>

    <!-- Sort by | Explore fragment -->
    <string name="sort_by_popular">Popular shows</string>
    <string name="sort_by_top_rated">Top rated shows</string>
    <string name="app_title_popular">Popular TV shows</string>
    <string name="app_title_top_rated">Top rated TV shows</string>
    <string name="sort">Sort</string>

    <!-- Search Fragment-->
    <string name="search_hint">Title of TV series</string>

    <!-- widget -->
    <string name="appwidget_text">Next 3 tv series</string>
    <string name="add_widget">Add widget</string>

    <!-- Other -->
    <string name="Today">Today</string>
    <string name="NO_DATA">No date</string>
    <string name="NO_DATE_YET">No date yet</string>
    <string name="NO_DATA_YET">No data yet</string>
    <string name="DB_CHILD_SERIES_ID">series_id</string>
    <string name="label_air_date">Air date:</string>
    <string name="label_episodes_number">Episodes number:</string>
    <string name="series_over">Series has ended</string>

    <string name="service_name">Service Name</string>
    <string name="snackbar_series_remove"> has been removed from tracked series</string>
    <string name="snackbar_series_added"> has been added to tracked series</string>
    <string name="print_labes"> aires </string>
    <string name="label_season">Season</string>
    <string name="label_next_episode">Episode</string>
    <string name="label_episode_counter">Episodes:</string>
    <string name="title_episode_counter">Episodes</string>
    <string name="label_aired_date">Aired date: </string>
    <string name="AUTH">AUTH</string>
    <string name="see_all_episodes">See all episodes</string>
    <string name="nothing_to_track">There\'s nothing to track</string>
    <string name="test_string">TEST</string>
    <string name="test_number">00</string>
    <string name="no_data_seasons">Sorry, there is no information about episodes.</string>
    <string name="no_data">No data</string>
    <string name="tv_series_poster">TV series poster</string>
    <string name="view_divider">View divider</string>
    <string name="tv_episode_image">Episode image</string>
    <string name="tv_season_image">Season image</string>
    <string name="tv_series_image">TV series image</string>
    <string name="state_no_internet">No internet connection.</string>
    <string name="INTERNET_CONNECTION">INTERNET CONNECTION STATE</string>
    <string name="tv_add_tracked">Add Tv series to tracked</string>
    <string name="tv_series_remove">Remove TV series from tracked</string>


</resources>
