<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_tracked"
        android:enabled="true"
        android:icon="@drawable/ic_tv"
        android:title="@string/bottom_nav_item_1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/bottom_nav_item_2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_popular"
        android:enabled="true"
        android:icon="@drawable/ic_popular"
        android:title="@string/bottom_nav_item_3"
        app:showAsAction="ifRoom" />
</menu>