<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/poster"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/tv_series_poster"
            android:layout_width="37dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/test_string"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/poster"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/next_episode_date"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/test_string"
            android:textAlignment="viewEnd"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/next_episode_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/next_episode_day">

        </TextView>

        <TextView
            android:id="@+id/next_episode_day"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/test_string"
            android:textAlignment="viewEnd"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/next_episode_time"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/test_string"
            android:textAlignment="viewEnd"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </TextView>

        <TextView
            android:id="@+id/episode_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/label_next_episode"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/season_number"
            app:layout_constraintTop_toBottomOf="@+id/title">

        </TextView>

        <TextView
            android:id="@+id/episode_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/test_number"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/episode_number_label"
            app:layout_constraintTop_toBottomOf="@+id/title">

        </TextView>

        <TextView
            android:id="@+id/season_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/test_number"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/season_number_label"
            app:layout_constraintTop_toBottomOf="@+id/title">

        </TextView>

        <TextView
            android:id="@+id/season_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/label_season"
            android:textColor="@color/secondary_text"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/poster"
            app:layout_constraintTop_toBottomOf="@+id/title">

        </TextView>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>